--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,16 @@ html body {
   height: 100%;
   width: 100%;
 }
+#crsr {
+  height: 2.3vw;
+  width: 2.3vw;
+  border-radius: 50%;
+  border: 1px solid #ffffffee;
+  position: fixed;
+  z-index: 999;
+  mix-blend-mode: difference;
+  transform: translate(-50%, -50%);
+}
 #loader {
   height: 100%;
   width: 100%;
@@ -95,4 +105,50 @@ html body {
   height: 100vh;
   width: 100%;
   background-color: #151515;
+}
+#page1 #nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2.3vw 5.5vw;
+}
+#nav-part2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3vw;
+}
+#nav-part h4 {
+  font-size: 0.8vw;
+  font-weight: 500;
+}
+.hero {
+  width: 72%;
+  margin-left: 27%;
+  height: fit-content;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index:999999 ;
+}
+.hero:nth-child(2) {
+  margin-top: 18vh;
+}
+.hero h1 {
+  font-size: 7.2vw;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 7.2vw;
+}
+.hero h2 , .hero h3{
+  font-size: 7.2vw;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 7.2vw;
+}
+.hero h2:hover{
+  -webkit-text-stroke:2px #fff ;
+  color: transparent;
+  font-weight: 500;
 }
