--- a/styles.css
+++ b/styles.css
@@ -2,23 +2,31 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #fff;
   font-family: "Plain Light";
+  color: #fff;
 }
-html body {
+
+html, body {
   height: 100%;
   width: 100%;
 }
+
+body{
+  overflow-x: hidden;
+}
+
 #crsr {
-  height: 2.3vw;
-  width: 2.3vw;
+  height: 2vw;
+  width: 2vw;
   border-radius: 50%;
-  border: 1px solid #ffffffee;
+  /* background-color: white; */
+  border: 1px solid #ffffffbe;
   position: fixed;
-  z-index: 999;
+  z-index: 99;
   mix-blend-mode: difference;
   transform: translate(-50%, -50%);
 }
+
 #loader {
   height: 100%;
   width: 100%;
@@ -27,128 +35,278 @@ html body {
   background-color: #030303;
   padding: 25vh 10vw;
 }
+
 .line {
+  /* background-color: red; */
   height: fit-content;
   overflow: hidden;
   display: flex;
   align-items: center;
-  gap: 3vw;
   justify-content: flex-start;
+  gap: 3vw;
 }
+
 #line1-part1 {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 1vw;
+
 }
-#line1-part1 h5,
-#line1-part1 h6 {
+
+#line1-part1 h5, #line1-part1 h6 {
   font-size: 3vw;
   font-weight: 100;
-  font-family: "silk serif";
+  font-family: 'silk serif';
 }
+
 #line1-part1 h5 {
+  /* background-color: red; */
   width: 5vw;
-  text-align: start;
+  text-align: right;
 }
+
 .line h1 {
   font-size: 6.5vw;
   text-transform: uppercase;
   font-weight: 900;
 }
+
 .line h2 {
   font-size: 5vw;
   text-transform: uppercase;
   font-weight: 900;
   opacity: 0;
-  animation-duration: 5s;
+  animation-duration: 2s;
   animation-iteration-count: infinite;
 }
-@keyframes animation {
+
+@keyframes anime {
   0% {
-    font-family: "Plain light";
-    -webkit-text-stroke: 1px #fff;
-    color: #fff;
-    font-weight: 500;
-    opacity: 1;
+      font-family: "plain light";
+      -webkit-text-stroke: 1px #fff;
+      color: #fff;
+      font-weight: 500;
+      opacity: 1;
   }
+
   48% {
-    font-family: "Plain light";
-    -webkit-text-stroke: 1px #fff;
-    color: #fff;
-    font-weight: 500;
-    opacity: 0;
+      font-family: "plain light";
+      -webkit-text-stroke: 1px #fff;
+      color: #fff;
+      font-weight: 500;
+      opacity: 0;
   }
+
   50% {
-    font-family: "silk serif";
-    -webkit-text-stroke: 1px #fff;
-    color: #fff;
-    font-weight: 500;
-    opacity: 1;
-    color: transparent;
+      font-family: 'silk serif';
+      -webkit-text-stroke: 1px #fff;
+      font-weight: 500;
+      color: transparent;
+      opacity: 1;
   }
+
   100% {
-    font-family: "silk serif";
-    -webkit-text-stroke: 1px #fff;
-    color: #fff;
-    font-weight: 500;
-    opacity: 0;
-    color: transparent;
+      font-family: 'silk serif';
+      -webkit-text-stroke: 1px #fff;
+      font-weight: 500;
+      color: transparent;
+      opacity: 0;
   }
 }
 
+
+
+
+
 #main {
   position: relative;
-  background-color: #030303;
+  background-color:  #151515;
 }
+
 #page1 {
   height: 100vh;
   width: 100%;
-  background-color: #151515;
+  /* background-color: #151515; */
+  position: relative;
+  z-index: 100;
 }
+
 #page1 #nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 2.3vw 5.5vw;
 }
+
 #nav-part2 {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 3vw;
 }
-#nav-part h4 {
+
+#nav-part2 h4 {
   font-size: 0.8vw;
   font-weight: 500;
 }
+
 .hero {
+  /* background-color: red; */
   width: 72%;
   margin-left: 27%;
   height: fit-content;
+  /* background-color: red; */
   overflow: hidden;
   display: flex;
   align-items: center;
-  position: relative;
-  z-index:999999 ;
+
 }
+
 .hero:nth-child(2) {
   margin-top: 18vh;
 }
+
 .hero h1 {
   font-size: 7.2vw;
   font-weight: 600;
   text-transform: uppercase;
   line-height: 7.2vw;
+
 }
-.hero h2 , .hero h3{
+
+
+.hero h2{
   font-size: 7.2vw;
   font-weight: 600;
   text-transform: uppercase;
   line-height: 7.2vw;
+  border-bottom: 0.5vw solid #fff; 
+  /* padding-bottom: 0.8vw;
+  /* transition: all ease 0.3s; */
+
 }
 .hero h2:hover{
-  -webkit-text-stroke:2px #fff ;
+  -webkit-text-stroke: 2px #fff;
   color: transparent;
   font-weight: 500;
+  border-bottom: 0.5vw solid #ffffff00;
+}
+
+#page2{
+  height: 100vh;
+  width: 100%;
+  padding-top: 17vh;
+  position: relative;
+}
+
+#video-container{
+  height: 66vh;
+  width: 71vw;
+  position: relative;
+  left: 28%;
+  background-image: url(https://obys.agency/wp-content/uploads/2022/11/Showreel-2022-preview-1.jpg);
+}
+#video-container img{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  top :0;
+}
+#video-container video{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+#video-cursor{
+  background-color: #FFA63D;
+  height: 8.5vw;
+  width: 8.5vw;
+  border-radius: 50%;
+  position: absolute;
+  top: -10%;
+  left: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+}
+#video-cursor i{
+  font-size: 2vw;
+}
+#page3{
+  min-height: 100vh;
+  width: 100%;
+  background-color: rgb(61, 61, 61);
+  position: relative;
+}
+#page4{
+  min-height: 100vh;
+  position: relative;
+  width: 100%;
+  /* background-color: rgb(61, 61, 61); */
+  padding: 7vh 0;
+}
+
+#page4-content{
+  width: 72vw;
+  position: relative;
+  margin-left: 28%;
+}
+#page4-content h1{
+  font-size: 7vw;
+  text-transform: uppercase;
+}
+#page4-content .underline{
+  height: 1px;
+  width: 100%;
+  background-color: #fff;
+  margin: 5vw 0;
+}
+#page4-content>p{
+  font-size: 2.05vw;
+  width: 50%;
+  margin-bottom: 3vw;
+}
+
+#page4-flex{
+  display: flex;
+}
+#page4-flex img{
+  width: 48%;
+}
+#page4-flex p{
+  font-size: 0.9vw;
+  width: 19%;
+  margin-left: 1vw;
+}
+#page4-blue-div{
+  background-color: #3F7DF4;
+  width: 33vw;
+  padding: 3vw;
+  position: relative;
+  margin-top: -35vh;
+  margin-left: 26vw;
+}
+.blue-div-elem{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  /* background-color: red; */
+  padding: 1.7vw 0;
+  border-bottom: 2px solid #ffffff94;
+}
+.blue-div-elem h4{
+  font-size: 1.4vw;
+  font-weight: 500;
+}
+.blue-div-elem p{
+  width: 40%;
+  font-size: 0.8vw;
+}
+
+#page5{
+  min-height: 100vh;
+  width: 100%;
 }
