--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,13 @@
   color: #fff;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   width: 100%;
 }
 
-body{
+body {
   overflow-x: hidden;
 }
 
@@ -51,13 +52,13 @@ body{
   align-items: center;
   justify-content: center;
   gap: 1vw;
-
 }
 
-#line1-part1 h5, #line1-part1 h6 {
+#line1-part1 h5,
+#line1-part1 h6 {
   font-size: 3vw;
   font-weight: 100;
-  font-family: 'silk serif';
+  font-family: "silk serif";
 }
 
 #line1-part1 h5 {
@@ -83,45 +84,41 @@ body{
 
 @keyframes anime {
   0% {
-      font-family: "plain light";
-      -webkit-text-stroke: 1px #fff;
-      color: #fff;
-      font-weight: 500;
-      opacity: 1;
+    font-family: "plain light";
+    -webkit-text-stroke: 1px #fff;
+    color: #fff;
+    font-weight: 500;
+    opacity: 1;
   }
 
   48% {
-      font-family: "plain light";
-      -webkit-text-stroke: 1px #fff;
-      color: #fff;
-      font-weight: 500;
-      opacity: 0;
+    font-family: "plain light";
+    -webkit-text-stroke: 1px #fff;
+    color: #fff;
+    font-weight: 500;
+    opacity: 0;
   }
 
   50% {
-      font-family: 'silk serif';
-      -webkit-text-stroke: 1px #fff;
-      font-weight: 500;
-      color: transparent;
-      opacity: 1;
+    font-family: "silk serif";
+    -webkit-text-stroke: 1px #fff;
+    font-weight: 500;
+    color: transparent;
+    opacity: 1;
   }
 
   100% {
-      font-family: 'silk serif';
-      -webkit-text-stroke: 1px #fff;
-      font-weight: 500;
-      color: transparent;
-      opacity: 0;
+    font-family: "silk serif";
+    -webkit-text-stroke: 1px #fff;
+    font-weight: 500;
+    color: transparent;
+    opacity: 0;
   }
 }
 
-
-
-
-
 #main {
   position: relative;
-  background-color:  #151515;
+  background-color: #151515;
 }
 
 #page1 {
@@ -160,7 +157,6 @@ body{
   overflow: hidden;
   display: flex;
   align-items: center;
-
 }
 
 .hero:nth-child(2) {
@@ -172,55 +168,52 @@ body{
   font-weight: 600;
   text-transform: uppercase;
   line-height: 7.2vw;
-
 }
 
-
-.hero h2{
+.hero h2 {
   font-size: 7.2vw;
   font-weight: 600;
   text-transform: uppercase;
   line-height: 7.2vw;
-  border-bottom: 0.5vw solid #fff; 
+  border-bottom: 0.5vw solid #fff;
   /* padding-bottom: 0.8vw;
   /* transition: all ease 0.3s; */
-
 }
-.hero h2:hover{
+.hero h2:hover {
   -webkit-text-stroke: 2px #fff;
   color: transparent;
   font-weight: 500;
   border-bottom: 0.5vw solid #ffffff00;
 }
 
-#page2{
+#page2 {
   height: 100vh;
   width: 100%;
   padding-top: 17vh;
   position: relative;
 }
 
-#video-container{
+#video-container {
   height: 66vh;
   width: 71vw;
   position: relative;
   left: 28%;
   background-image: url(https://obys.agency/wp-content/uploads/2022/11/Showreel-2022-preview-1.jpg);
 }
-#video-container img{
+#video-container img {
   position: absolute;
   height: 100%;
   width: 100%;
   object-fit: cover;
-  top :0;
+  top: 0;
 }
-#video-container video{
+#video-container video {
   height: 100%;
   width: 100%;
   object-fit: cover;
 }
-#video-cursor{
-  background-color: #FFA63D;
+#video-cursor {
+  background-color: #ffa63d;
   height: 8.5vw;
   width: 8.5vw;
   border-radius: 50%;
@@ -232,16 +225,16 @@ body{
   justify-content: center;
   z-index: 999;
 }
-#video-cursor i{
+#video-cursor i {
   font-size: 2vw;
 }
-#page3{
+#page3 {
   min-height: 100vh;
   width: 100%;
   background-color: rgb(61, 61, 61);
   position: relative;
 }
-#page4{
+#page4 {
   min-height: 100vh;
   position: relative;
   width: 100%;
@@ -249,47 +242,47 @@ body{
   padding: 7vh 0;
 }
 
-#page4-content{
+#page4-content {
   width: 72vw;
   position: relative;
   margin-left: 28%;
 }
-#page4-content h1{
+#page4-content h1 {
   font-size: 7vw;
   text-transform: uppercase;
 }
-#page4-content .underline{
+#page4-content .underline {
   height: 1px;
   width: 100%;
   background-color: #fff;
   margin: 5vw 0;
 }
-#page4-content>p{
+#page4-content > p {
   font-size: 2.05vw;
   width: 50%;
   margin-bottom: 3vw;
 }
 
-#page4-flex{
+#page4-flex {
   display: flex;
 }
-#page4-flex img{
+#page4-flex img {
   width: 48%;
 }
-#page4-flex p{
+#page4-flex p {
   font-size: 0.9vw;
   width: 19%;
   margin-left: 1vw;
 }
-#page4-blue-div{
-  background-color: #3F7DF4;
+#page4-blue-div {
+  background-color: #3f7df4;
   width: 33vw;
   padding: 3vw;
   position: relative;
   margin-top: -35vh;
   margin-left: 26vw;
 }
-.blue-div-elem{
+.blue-div-elem {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
@@ -297,16 +290,76 @@ body{
   padding: 1.7vw 0;
   border-bottom: 2px solid #ffffff94;
 }
-.blue-div-elem h4{
+.blue-div-elem h4 {
   font-size: 1.4vw;
   font-weight: 500;
 }
-.blue-div-elem p{
+.blue-div-elem p {
   width: 40%;
   font-size: 0.8vw;
 }
 
-#page5{
+#page5 {
   min-height: 100vh;
   width: 100%;
+  /* padding: 5vw 0; */
+  position: relative;
+}
+.elem {
+  white-space: nowrap;
+  overflow-x: hidden;
+  margin-bottom: -2w;
+}
+.elem h1 {
+  font-size: 7vw;
+  -webkit-text-stroke: 1px #fff;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: transparent;
+  display: inline-block;
+  margin-right: 16px;
+  animation-name: anime;
+  animation-duration: 12s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+@keyframes anime {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(calc(-100% - 20px));
+  }
+}
+.elem2 {
+  white-space: nowrap;
+  overflow-x: hidden;
+  margin-bottom: -2vw;
+}
+.elem2 h1 {
+  font-size: 7vw;
+  -webkit-text-stroke: 1px #fff;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: transparent;
+  display: inline-block;
+  margin-right: 16px;
+  transform: translateX(calc(-100% -20px));
+  animation-name: anime;
+  animation-duration: 12s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: reverse;
+}
+.elem span{
+  font-style: italic;
+  font-family: "silk serif";
+  color: transparent;
+
+}
+.elem2 span{
+  font-style: italic;
+  font-family: "silk serif";
+  color: transparent;
+  
 }
